--- a/style.css
+++ b/style.css
@@ -39,11 +39,11 @@ box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 
 
 
-.introduction {
+/*.introduction {
     display: flex;
     align-items: flex-start;
     padding: 30px;
-}
+}*/
 
 .logo {
     font-size: 28px;
@@ -80,7 +80,7 @@ box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     font-size: 70px;
     line-height: 72px;
     font-weight: bold;
-    margin-top: 250px;
+    margin-top: 500px;
 }
 
 .role {
@@ -115,18 +115,21 @@ box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 /* IMAGE + SHAPE */
 .hero-right {
     position: relative;
+    margin-top: 500px;
+
 }
 
-.shape {
+/*.shape {
     width: 300px;
     height: 300px;
     background: #FFD447;
     border-radius: 40% 60% 60% 40%;
+    margin-top: 500px;
     position: absolute;
     top: 0;
     left: 0;
 }
-
+*/
 #profile-img {
     width: 260px;
     height: 260px;
